# zipline-first-poc

./: README.md  package.json
app/: notes.txt  package.json
app/src/components/: AppBar.tsx  ContentContainer.tsx  Notification.tsx  Profile.tsx  SendTransaction.tsx
app/src/contexts/: ContextProvider.tsx  NetworkConfigurationProvider.tsx
app/src/lib/: Secp256k1.ts  ZiplineAction.ts  ZiplineSdk.ts  zipline.ts
app/src/views/basics/: index.tsx
zipline/: Anchor.toml  package.json
zipline/programs/zipline/: Cargo.toml
zipline/programs/zipline/src/: lib.rs  secp256k1_defs.rs  state.rs
zipline/programs/zipline/tests/: secp256k1_helper.rs  test_functional.rs
