[package]
name = "zipline"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zipline"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
bytemuck = "1.11.0"

[dev-dependencies]
solana-sdk = "1.16"
solana-program-test = "1.16"
rand = "0.7.0"
libsecp256k1 = "0.6.0"
sha3 = "0.10.4"
bincode = "1.3.3"